tests/expectations/compiler/finalize/set_incorrect_num_operands.out
Error [ETYC0372031]: A mapping's value cannot be a record
    --> compiler-test:8:5
     |
   8 |     mapping tokens: address => Token;
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372147]: Invalid expression in a final block. `self.caller` cannot be used directly here.
    --> compiler-test:11:47
     |
  11 |         return final { finalize_decrease_self(self.caller, amount); };
     |                                               ^^^^^^^^^^^
     |
     = Bind `self.caller` to a variable before the `final` block: `let val = self.caller;`
Error [ETYC0372006]: Call expected `3` args, but got `4`
    --> compiler-test:16:5
     |
  16 |     Mapping::set(tokens, addr, amount, 1u128);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `3` args, but got `4`
    --> compiler-test:17:5
     |
  17 |     tokens.set(addr, amount, 1u128);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `3` args, but got `2`
    --> compiler-test:18:5
     |
  18 |     Mapping::set(amounts, 1u8);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `3` args, but got `2`
    --> compiler-test:19:5
     |
  19 |     amounts.set(1u8);
     |     ^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `3` args, but got `1`
    --> compiler-test:20:5
     |
  20 |     Mapping::set(amounts);
     |     ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `3` args, but got `1`
    --> compiler-test:21:5
     |
  21 |     amounts.set();
     |     ^^^^^^^^^^^^^
